<resources>
    <string name="app_name">MyApp Admin</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="total_users">Total Users</string>
    <string name="uptime">Server Uptime</string>
    <string name="loading">Loading…</string>
    <string name="login_error">Invalid credentials</string>
</resources>
